--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Trivia</string>
     <string name="app_type">Multiple Choice</string>
+
+    <string name="service_description">This service handles the game connection</string>
 </resources>
